[gd_scene load_steps=14 format=2]

[ext_resource path="res://Car2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Car1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Car1.gd" type="Script" id=3]
[ext_resource path="res://Final.gd" type="Script" id=4]
[ext_resource path="res://hp.gd" type="Script" id=5]
[ext_resource path="res://Imports/Material_004.material" type="Material" id=6]
[ext_resource path="res://speed1.gd" type="Script" id=7]
[ext_resource path="res://speed2.gd" type="Script" id=8]
[ext_resource path="res://Car2.gd" type="Script" id=9]
[ext_resource path="res://timer.gd" type="Script" id=10]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( 1, 0, 1, -1, 0, -1, 1, 0, -1, 1, 0, 1, -1, 0, 1, -1, 0, -1 )

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -1, 0, -1, 2.00001, 1e-05, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 60, 0, 60, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 60, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 60, 0, 60, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 60, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 6 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 6
}

[sub_resource type="BitmapFont" id=3]

[node name="World" type="Spatial"]
script = ExtResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 197.61, 0 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 145, 0, 0, 0, 1, 0, 0, 0, 85, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 5, -0.05, 0, -0.1 )
shape = SubResource( 1 )

[node name="Plane" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0610589, -0.367773, 0.00885715 )
mesh = SubResource( 2 )
material/0 = null

[node name="car1" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 30, 1, 0 )
continuous_cd = false
contact_monitor = true
script = ExtResource( 3 )

[node name="Spatial" type="Spatial" parent="car1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 14 )

[node name="car2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 1, 0 )
continuous_cd = false
contact_monitor = true
script = ExtResource( 9 )

[node name="Spatial" type="Spatial" parent="car2"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -14, 4, 0 )

[node name="Screen" type="HBoxContainer" parent="."]
margin_left = 7.17499
margin_top = 6.39165
margin_right = 1290.18
margin_bottom = 602.392
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car1" type="ViewportContainer" parent="Screen"]
margin_right = 508.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport" type="Viewport" parent="Screen/car1"]
size = Vector2( 508, 596 )
handle_input_locally = false
render_target_update_mode = 3

[node name="InterpolatedCamera1" type="InterpolatedCamera" parent="Screen/car1/Viewport"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )
far = 200.0
target = NodePath("../../../../car1/Spatial")
speed = 100.0
enabled = true

[node name="speed1" type="Label" parent="Screen/car1/Viewport"]
margin_left = 7.17499
margin_top = 6.39165
margin_right = 47.175
margin_bottom = 20.3917
custom_fonts/font = SubResource( 3 )
text = "test"
script = ExtResource( 7 )

[node name="minimap" type="ViewportContainer" parent="Screen"]
margin_left = 512.0
margin_right = 767.0
margin_bottom = 596.0

[node name="Viewport" type="Viewport" parent="Screen/minimap"]
size = Vector2( 255, 256 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Screen/minimap/Viewport"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -10, 120, 0 )
far = 150.0

[node name="car2" type="ViewportContainer" parent="Screen"]
margin_left = 771.0
margin_right = 1279.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport" type="Viewport" parent="Screen/car2"]
size = Vector2( 508, 596 )
handle_input_locally = false
render_target_update_mode = 3

[node name="InterpolatedCamera2" type="InterpolatedCamera" parent="Screen/car2/Viewport"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )
far = 200.0
target = NodePath("../../../../car2/Spatial")
speed = 100.0
enabled = true

[node name="speed2" type="Label" parent="Screen/car2/Viewport"]
margin_left = 7.17499
margin_top = 6.39165
margin_right = 47.175
margin_bottom = 20.3917
script = ExtResource( 8 )

[node name="hp" type="ViewportContainer" parent="Screen"]
margin_left = 1283.0
margin_right = 1283.0
margin_bottom = 596.0

[node name="hp" type="Label" parent="Screen/hp"]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 5 )

[node name="timer" type="Label" parent="Screen/hp"]
margin_right = 40.0
margin_bottom = 14.0
valign = 1
script = ExtResource( 10 )
[connection signal="body_entered" from="car1" to="car2" method="_on_car1_body_entered"]
[connection signal="speedChange" from="car1" to="Screen/car1/Viewport/speed1" method="_on_car1_speedChange"]
[connection signal="hpChange" from="car2" to="Screen/hp/hp" method="_on_car2_hpChange"]
[connection signal="speedChange" from="car2" to="Screen/car2/Viewport/speed2" method="_on_car2_speedChange"]
[connection signal="timerChange" from="car2" to="Screen/hp/timer" method="_on_car2_timerChange"]
